--- a/index.html
+++ b/index.html
@@ -5,9 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aula de CSS do dia 04.04.2023</title>
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
     <h1>Testando o segundo commit</h1>
     <h2>Terceiro commit</h2>
+
+    <style>
+        body{
+            font-family: 'Times New Roman', Times, serif;
+            background-color: azure;
+        }
+        h1{
+            color: #f0f0f0;
+        }
+    </style>
 </body>
 </html>
